# ncnn_mcp

./: .gitignore  README.md  mcp_config.json  pyproject.toml
ncnn_mcp/: __init__.py  server.py
test/: run_whisper.py  test_server.py
