[project]
name = "ncnn-mcp"
version = "0.1.0"
description = "NCNN Whisper Audio Transcription MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
ncnn-mcp = "ncnn_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["ncnn_mcp"]
# include = ["model/**"]
